add stock gin, grpc api
