# scheduler/api/pb/service_stockinfo_schduler.pb.go
@@ -1,0 +1,97 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.31.0
+// 	protoc        v3.20.0
+// source: service_stockinfo_schduler.proto
+
+package pb
+
+import (
+	_ "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2/options"
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+var File_service_stockinfo_schduler_proto protoreflect.FileDescriptor
+
+var file_service_stockinfo_schduler_proto_rawDesc = []byte{
+	0x0a, 0x20, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x5f, 0x73, 0x74, 0x6f, 0x63, 0x6b, 0x69,
+	0x6e, 0x66, 0x6f, 0x5f, 0x73, 0x63, 0x68, 0x64, 0x75, 0x6c, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x12, 0x02, 0x70, 0x62, 0x1a, 0x13, 0x73, 0x74, 0x6f, 0x63, 0x6b, 0x5f, 0x64, 0x61,
+	0x79, 0x5f, 0x61, 0x76, 0x67, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1c, 0x67, 0x6f, 0x6f,
+	0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69,
+	0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x63, 0x2d, 0x67, 0x65, 0x6e, 0x2d, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x76, 0x32, 0x2f,
+	0x6f, 0x70, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69,
+	0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0xab, 0x01, 0x0a, 0x11, 0x53, 0x74,
+	0x6f, 0x63, 0x6b, 0x49, 0x6e, 0x66, 0x6f, 0x53, 0x63, 0x68, 0x64, 0x75, 0x6c, 0x65, 0x72, 0x12,
+	0x95, 0x01, 0x0a, 0x0e, 0x47, 0x65, 0x74, 0x53, 0x74, 0x6f, 0x63, 0x6b, 0x44, 0x61, 0x79, 0x41,
+	0x76, 0x67, 0x12, 0x16, 0x2e, 0x70, 0x62, 0x2e, 0x53, 0x74, 0x6f, 0x63, 0x6b, 0x44, 0x61, 0x79,
+	0x41, 0x76, 0x67, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x17, 0x2e, 0x70, 0x62, 0x2e,
+	0x53, 0x74, 0x6f, 0x63, 0x6b, 0x44, 0x61, 0x79, 0x41, 0x76, 0x67, 0x52, 0x65, 0x73, 0x70, 0x6f,
+	0x6e, 0x73, 0x65, 0x22, 0x52, 0x92, 0x41, 0x36, 0x12, 0x11, 0x47, 0x65, 0x74, 0x20, 0x73, 0x74,
+	0x6f, 0x63, 0x6b, 0x5f, 0x64, 0x61, 0x79, 0x5f, 0x61, 0x76, 0x67, 0x1a, 0x21, 0x55, 0x73, 0x65,
+	0x20, 0x74, 0x68, 0x69, 0x73, 0x20, 0x41, 0x50, 0x49, 0x20, 0x74, 0x6f, 0x20, 0x67, 0x65, 0x74,
+	0x20, 0x73, 0x74, 0x6f, 0x63, 0x6b, 0x5f, 0x64, 0x61, 0x79, 0x5f, 0x61, 0x76, 0x67, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x13, 0x12, 0x11, 0x2f, 0x76, 0x31, 0x2f, 0x73, 0x74, 0x6f, 0x63, 0x6b, 0x5f,
+	0x64, 0x61, 0x79, 0x5f, 0x61, 0x76, 0x67, 0x42, 0xa7, 0x01, 0x92, 0x41, 0x74, 0x12, 0x72, 0x0a,
+	0x18, 0x73, 0x74, 0x63, 0x6f, 0x6b, 0x20, 0x49, 0x6e, 0x66, 0x6f, 0x20, 0x73, 0x63, 0x68, 0x65,
+	0x64, 0x75, 0x6c, 0x65, 0x72, 0x20, 0x41, 0x50, 0x49, 0x22, 0x51, 0x0a, 0x12, 0x73, 0x74, 0x63,
+	0x6f, 0x6b, 0x5f, 0x69, 0x6e, 0x66, 0x6f, 0x20, 0x70, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74, 0x12,
+	0x26, 0x68, 0x74, 0x74, 0x70, 0x73, 0x3a, 0x2f, 0x2f, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e,
+	0x63, 0x6f, 0x6d, 0x2f, 0x52, 0x6f, 0x79, 0x63, 0x65, 0x41, 0x7a, 0x75, 0x72, 0x65, 0x2f, 0x67,
+	0x6f, 0x5f, 0x73, 0x74, 0x6f, 0x63, 0x6b, 0x1a, 0x13, 0x72, 0x6f, 0x79, 0x63, 0x65, 0x77, 0x6e,
+	0x61, 0x67, 0x40, 0x67, 0x6d, 0x61, 0x69, 0x6c, 0x2e, 0x63, 0x6f, 0x6d, 0x32, 0x03, 0x31, 0x2e,
+	0x30, 0x5a, 0x2e, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x52, 0x6f,
+	0x79, 0x63, 0x65, 0x41, 0x7a, 0x75, 0x72, 0x65, 0x2f, 0x67, 0x6f, 0x2d, 0x73, 0x74, 0x6f, 0x63,
+	0x6b, 0x69, 0x6e, 0x66, 0x6f, 0x2d, 0x73, 0x63, 0x68, 0x64, 0x75, 0x6c, 0x65, 0x72, 0x2f, 0x70,
+	0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var file_service_stockinfo_schduler_proto_goTypes = []interface{}{
+	(*StockDayAvgRequest)(nil),  // 0: pb.StockDayAvgRequest
+	(*StockDayAvgResponse)(nil), // 1: pb.StockDayAvgResponse
+}
+var file_service_stockinfo_schduler_proto_depIdxs = []int32{
+	0, // 0: pb.StockInfoSchduler.GetStockDayAvg:input_type -> pb.StockDayAvgRequest
+	1, // 1: pb.StockInfoSchduler.GetStockDayAvg:output_type -> pb.StockDayAvgResponse
+	1, // [1:2] is the sub-list for method output_type
+	0, // [0:1] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_service_stockinfo_schduler_proto_init() }
+func file_service_stockinfo_schduler_proto_init() {
+	if File_service_stockinfo_schduler_proto != nil {
+		return
+	}
+	file_stock_day_avg_proto_init()
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_service_stockinfo_schduler_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   0,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_service_stockinfo_schduler_proto_goTypes,
+		DependencyIndexes: file_service_stockinfo_schduler_proto_depIdxs,
+	}.Build()
+	File_service_stockinfo_schduler_proto = out.File
+	file_service_stockinfo_schduler_proto_rawDesc = nil
+	file_service_stockinfo_schduler_proto_goTypes = nil
+	file_service_stockinfo_schduler_proto_depIdxs = nil
+}
