# scheduler/api/pb/stock_day_avg.pb.go
@@ -1,0 +1,308 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.31.0
+// 	protoc        v3.20.0
+// source: stock_day_avg.proto
+
+package pb
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type StockDayAvg struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	StockCode  string                 `protobuf:"bytes,1,opt,name=stock_code,json=stockCode,proto3" json:"stock_code,omitempty"`
+	StockName  string                 `protobuf:"bytes,2,opt,name=stock_name,json=stockName,proto3" json:"stock_name,omitempty"`
+	ClosePrice string                 `protobuf:"bytes,3,opt,name=close_price,json=closePrice,proto3" json:"close_price,omitempty"`
+	MonthlyAvg string                 `protobuf:"bytes,4,opt,name=monthly_avg,json=monthlyAvg,proto3" json:"monthly_avg,omitempty"`
+	UpDate     *timestamppb.Timestamp `protobuf:"bytes,5,opt,name=up_date,json=upDate,proto3" json:"up_date,omitempty"`
+}
+
+func (x *StockDayAvg) Reset() {
+	*x = StockDayAvg{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_stock_day_avg_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *StockDayAvg) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*StockDayAvg) ProtoMessage() {}
+
+func (x *StockDayAvg) ProtoReflect() protoreflect.Message {
+	mi := &file_stock_day_avg_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use StockDayAvg.ProtoReflect.Descriptor instead.
+func (*StockDayAvg) Descriptor() ([]byte, []int) {
+	return file_stock_day_avg_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *StockDayAvg) GetStockCode() string {
+	if x != nil {
+		return x.StockCode
+	}
+	return ""
+}
+
+func (x *StockDayAvg) GetStockName() string {
+	if x != nil {
+		return x.StockName
+	}
+	return ""
+}
+
+func (x *StockDayAvg) GetClosePrice() string {
+	if x != nil {
+		return x.ClosePrice
+	}
+	return ""
+}
+
+func (x *StockDayAvg) GetMonthlyAvg() string {
+	if x != nil {
+		return x.MonthlyAvg
+	}
+	return ""
+}
+
+func (x *StockDayAvg) GetUpDate() *timestamppb.Timestamp {
+	if x != nil {
+		return x.UpDate
+	}
+	return nil
+}
+
+type StockDayAvgResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Result []*StockDayAvg `protobuf:"bytes,1,rep,name=result,proto3" json:"result,omitempty"`
+}
+
+func (x *StockDayAvgResponse) Reset() {
+	*x = StockDayAvgResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_stock_day_avg_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *StockDayAvgResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*StockDayAvgResponse) ProtoMessage() {}
+
+func (x *StockDayAvgResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_stock_day_avg_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use StockDayAvgResponse.ProtoReflect.Descriptor instead.
+func (*StockDayAvgResponse) Descriptor() ([]byte, []int) {
+	return file_stock_day_avg_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *StockDayAvgResponse) GetResult() []*StockDayAvg {
+	if x != nil {
+		return x.Result
+	}
+	return nil
+}
+
+type StockDayAvgRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *StockDayAvgRequest) Reset() {
+	*x = StockDayAvgRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_stock_day_avg_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *StockDayAvgRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*StockDayAvgRequest) ProtoMessage() {}
+
+func (x *StockDayAvgRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_stock_day_avg_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use StockDayAvgRequest.ProtoReflect.Descriptor instead.
+func (*StockDayAvgRequest) Descriptor() ([]byte, []int) {
+	return file_stock_day_avg_proto_rawDescGZIP(), []int{2}
+}
+
+var File_stock_day_avg_proto protoreflect.FileDescriptor
+
+var file_stock_day_avg_proto_rawDesc = []byte{
+	0x0a, 0x13, 0x73, 0x74, 0x6f, 0x63, 0x6b, 0x5f, 0x64, 0x61, 0x79, 0x5f, 0x61, 0x76, 0x67, 0x2e,
+	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x02, 0x70, 0x62, 0x1a, 0x1f, 0x67, 0x6f, 0x6f, 0x67, 0x6c,
+	0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x73,
+	0x74, 0x61, 0x6d, 0x70, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xc2, 0x01, 0x0a, 0x0b, 0x53,
+	0x74, 0x6f, 0x63, 0x6b, 0x44, 0x61, 0x79, 0x41, 0x76, 0x67, 0x12, 0x1d, 0x0a, 0x0a, 0x73, 0x74,
+	0x6f, 0x63, 0x6b, 0x5f, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09,
+	0x73, 0x74, 0x6f, 0x63, 0x6b, 0x43, 0x6f, 0x64, 0x65, 0x12, 0x1d, 0x0a, 0x0a, 0x73, 0x74, 0x6f,
+	0x63, 0x6b, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x73,
+	0x74, 0x6f, 0x63, 0x6b, 0x4e, 0x61, 0x6d, 0x65, 0x12, 0x1f, 0x0a, 0x0b, 0x63, 0x6c, 0x6f, 0x73,
+	0x65, 0x5f, 0x70, 0x72, 0x69, 0x63, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0a, 0x63,
+	0x6c, 0x6f, 0x73, 0x65, 0x50, 0x72, 0x69, 0x63, 0x65, 0x12, 0x1f, 0x0a, 0x0b, 0x6d, 0x6f, 0x6e,
+	0x74, 0x68, 0x6c, 0x79, 0x5f, 0x61, 0x76, 0x67, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0a,
+	0x6d, 0x6f, 0x6e, 0x74, 0x68, 0x6c, 0x79, 0x41, 0x76, 0x67, 0x12, 0x33, 0x0a, 0x07, 0x75, 0x70,
+	0x5f, 0x64, 0x61, 0x74, 0x65, 0x18, 0x05, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f,
+	0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69,
+	0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x06, 0x75, 0x70, 0x44, 0x61, 0x74, 0x65, 0x22,
+	0x3e, 0x0a, 0x13, 0x53, 0x74, 0x6f, 0x63, 0x6b, 0x44, 0x61, 0x79, 0x41, 0x76, 0x67, 0x52, 0x65,
+	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x27, 0x0a, 0x06, 0x72, 0x65, 0x73, 0x75, 0x6c, 0x74,
+	0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x0f, 0x2e, 0x70, 0x62, 0x2e, 0x53, 0x74, 0x6f, 0x63,
+	0x6b, 0x44, 0x61, 0x79, 0x41, 0x76, 0x67, 0x52, 0x06, 0x72, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x22,
+	0x14, 0x0a, 0x12, 0x53, 0x74, 0x6f, 0x63, 0x6b, 0x44, 0x61, 0x79, 0x41, 0x76, 0x67, 0x52, 0x65,
+	0x71, 0x75, 0x65, 0x73, 0x74, 0x42, 0x30, 0x5a, 0x2e, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e,
+	0x63, 0x6f, 0x6d, 0x2f, 0x52, 0x6f, 0x79, 0x63, 0x65, 0x41, 0x7a, 0x75, 0x72, 0x65, 0x2f, 0x67,
+	0x6f, 0x2d, 0x73, 0x74, 0x6f, 0x63, 0x6b, 0x69, 0x6e, 0x66, 0x6f, 0x2d, 0x73, 0x63, 0x68, 0x64,
+	0x75, 0x6c, 0x65, 0x72, 0x2f, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_stock_day_avg_proto_rawDescOnce sync.Once
+	file_stock_day_avg_proto_rawDescData = file_stock_day_avg_proto_rawDesc
+)
+
+func file_stock_day_avg_proto_rawDescGZIP() []byte {
+	file_stock_day_avg_proto_rawDescOnce.Do(func() {
+		file_stock_day_avg_proto_rawDescData = protoimpl.X.CompressGZIP(file_stock_day_avg_proto_rawDescData)
+	})
+	return file_stock_day_avg_proto_rawDescData
+}
+
+var file_stock_day_avg_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_stock_day_avg_proto_goTypes = []interface{}{
+	(*StockDayAvg)(nil),           // 0: pb.StockDayAvg
+	(*StockDayAvgResponse)(nil),   // 1: pb.StockDayAvgResponse
+	(*StockDayAvgRequest)(nil),    // 2: pb.StockDayAvgRequest
+	(*timestamppb.Timestamp)(nil), // 3: google.protobuf.Timestamp
+}
+var file_stock_day_avg_proto_depIdxs = []int32{
+	3, // 0: pb.StockDayAvg.up_date:type_name -> google.protobuf.Timestamp
+	0, // 1: pb.StockDayAvgResponse.result:type_name -> pb.StockDayAvg
+	2, // [2:2] is the sub-list for method output_type
+	2, // [2:2] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
+}
+
+func init() { file_stock_day_avg_proto_init() }
+func file_stock_day_avg_proto_init() {
+	if File_stock_day_avg_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_stock_day_avg_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*StockDayAvg); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_stock_day_avg_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*StockDayAvgResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_stock_day_avg_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*StockDayAvgRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_stock_day_avg_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   3,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_stock_day_avg_proto_goTypes,
+		DependencyIndexes: file_stock_day_avg_proto_depIdxs,
+		MessageInfos:      file_stock_day_avg_proto_msgTypes,
+	}.Build()
+	File_stock_day_avg_proto = out.File
+	file_stock_day_avg_proto_rawDesc = nil
+	file_stock_day_avg_proto_goTypes = nil
+	file_stock_day_avg_proto_depIdxs = nil
+}
